--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
 	],
 	"compilerOptions": {
 		"strict": true,
-		"types": ["node"]
+		"types": ["node"],
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["src/*"]
+		}
 	}
 }
